--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,17 +15,15 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Decode Google Cloud credentials
+      run: echo "${{ secrets.GCP_SA_KEY }}" | base64 -d > ./gcp-sa-key.json
+
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.2.1
       with:
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        service_account_key: ./gcp-sa-key.json
         project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-    - name: Authenticate with Google Cloud
-      run: |
-        echo "${{ secrets.GCP_SA_KEY }}" > ./gcp-sa-key.json
-        echo "GOOGLE_CREDENTIALS=$(pwd)/gcp-sa-key.json" >> $GITHUB_ENV
-        
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
@@ -42,12 +40,6 @@ jobs:
         context: ./app
         push: true
         tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/hello-world:latest
-
-    - name: Setup Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.2.1
-      with:
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
 
     - name: Configure Docker to use the gcloud command-line tool as a credential helper
       run: gcloud auth configure-docker
