--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,13 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Decode Google Cloud credentials
-      run: echo "${{ secrets.GCP_SA_KEY }}" | base64 -d > ./gcp-sa-key.json
+    # - name: Decode Google Cloud credentials
+    #   run: echo "${{ secrets.GCP_SA_KEY }}" | base64 -d > ./gcp-sa-key.json
 
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.2.1
       with:
-        service_account_key: ./gcp-sa-key.json
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
         project_id: ${{ secrets.GCP_PROJECT_ID }}
 
     - name: Set up Docker Buildx
