--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,13 @@ jobs:
       uses: actions/checkout@v2
 
     # - name: Decode Google Cloud credentials
-    #   run: echo "${{ secrets.GCP_SA_KEY }}" | base64 -d > ./gcp-sa-key.json
+    #   run: echo "./unique-magpie-388510-b44e9f3a9d74.json" | base64 -d > ./gcp-sa-key.json
 
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.2.1
       with:
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        service_account_key: ./unique-magpie-388510-b44e9f3a9d74.json
+        project_id: "unique-magpie-388510"
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
@@ -32,14 +32,14 @@ jobs:
       with:
         registry: gcr.io
         username: _json_key
-        password: ${{ secrets.GCP_SA_KEY }}
+        password: ./unique-magpie-388510-b44e9f3a9d74.json
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
         context: ./app
         push: true
-        tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/hello-world:latest
+        tags: gcr.io/"unique-magpie-388510"/hello-world:latest
 
     - name: Configure Docker to use the gcloud command-line tool as a credential helper
       run: gcloud auth configure-docker
