--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    # - name: Decode Google Cloud credentials
-    #   run: echo "${{ secrets.GCP_SA_KEY }}" | base64 -d > ./gcp-sa-key.json
+    - name: Decode Google Cloud credentials
+      run: echo "${{ secrets.GCP_SA_KEY }}" | base64 -d > ./gcp-sa-key.json
 
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.2.1
