--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.2.1
       with:
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        service_account_key: ./gcp-sa-key.json
         project_id: ${{ secrets.GCP_PROJECT_ID }}
 
     - name: Set up Docker Buildx
