--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,13 @@ jobs:
     - name: Decode Google Cloud credentials
       run: echo "${{ secrets.GCP_SA_KEY }}" | base64 -d > ./gcp-sa-key.json
 
-    - name: Set up Google Cloud SDK
+    - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.2.1
       with:
         service_account_key: ./gcp-sa-key.json
         project_id: ${{ secrets.GCP_PROJECT_ID }}
+        version: latest
+        export_default_credentials: false
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
