--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,12 +29,16 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Set JSON key as output
+      id: set_sa_key
+      run: echo "::set-output name=sa_key::$(cat ./gcp-sa-key.json)"
+      
     - name: Login to Google Container Registry
       uses: docker/login-action@v1 
       with:
         registry: gcr.io
         username: _json_key
-        password: ./gcp-sa-key.json
+        password: ${{ steps.set_sa_key.outputs.sa_key }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
